@@ -1,7 +1,7 @@
 #  File src/library/base/R/octhex.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2021 The R Core Team
+#  Copyright (C) 1995-2022 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -51,7 +51,8 @@ as.character.octmode <- function(x, keepStr = FALSE, ...) {
 
 print.octmode <- function(x, ...)
 {
-    print(format(x), ...)
+    if(length(x)) print(format(x), ...)
+    else          cat("<0-length octmode>\n")
     invisible(x)
 }
 
@@ -112,7 +113,8 @@ as.character.hexmode <- function(x, keepStr = FALSE, ...) {
 
 print.hexmode <- function(x, ...)
 {
-    print(format(x), ...)
+    if(length(x)) print(format(x), ...)
+    else          cat("<0-length hexmode>\n")
     invisible(x)
 }
 
