@@ -303,6 +303,19 @@ stopifnot(identical(1:4, charmatch(colnames(d),
 ## printed these as vector instead of 1-column matrix in R <= 4.2.x
 
 
+## print() of zero - length, PR#18422
+i0 <- integer(0)
+stopifnot(exprs = {
+    identical("<0-length octmode>", capture.output(as.octmode(i0)))
+    identical("<0-length hexmode>", capture.output(as.hexmode(i0)))
+    identical("<0-length roman>",   capture.output(as.roman  (i0)))
+    identical("person()",           capture.output(    person()))
+    identical("bibentry()",         capture.output(  bibentry()))
+    identical("<0-length citation>",capture.output(  citation()[0L]))
+})
+## printed nothing at all or invalid R-code in R <= 4.2.x
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
